# openlark

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  TESTING.md  api_list_export.csv  crates.md  justfile  review-445.md  review-446.md  review-447.md
.github/workflows/: ci.yml  coverage.yml  feature-matrix.yml  feishu-api-catalog-watch.yml  pre-release-compatibility.yml  quality-gates.yml  release.yml  service-registry-validation.yml
crates/openlark-analytics/: Cargo.toml
crates/openlark-application/: Cargo.toml
crates/openlark-auth/: Cargo.toml  README.md
crates/openlark-auth/examples/: api_demo.rs  api_validation_demo.rs
crates/openlark-auth/src/: lib.rs  token_provider.rs
crates/openlark-auth/src/auth/: mod.rs
crates/openlark-auth/src/auth/auth/v3/auth/: app_access_token.rs  app_access_token_internal.rs  app_ticket_resend.rs  mod.rs  tenant_access_token.rs  tenant_access_token_internal.rs
crates/openlark-auth/src/auth/authen/: mod.rs
crates/openlark-auth/src/auth/authen/v1/: mod.rs
crates/openlark-auth/src/auth/authen/v1/access_token/: create.rs  mod.rs
crates/openlark-auth/src/auth/authen/v1/oidc/: mod.rs
crates/openlark-auth/src/auth/authen/v1/oidc/access_token/: create.rs
crates/openlark-auth/src/auth/authen/v1/oidc/refresh_access_token/: create.rs
crates/openlark-auth/src/auth/authen/v1/refresh_access_token/: create.rs  mod.rs
crates/openlark-auth/src/auth/authen/v1/user_info/: get.rs  mod.rs
crates/openlark-auth/src/auth/oauth/: mod.rs
crates/openlark-auth/src/auth/oauth/old/: mod.rs
crates/openlark-auth/src/auth/oauth/old/default/: index.rs  mod.rs
crates/openlark-auth/src/human_authentication/human_authentication/v1/identity/: create.rs  mod.rs
crates/openlark-auth/src/models/auth/: mod.rs
crates/openlark-auth/src/models/authen/: mod.rs  token.rs
crates/openlark-auth/src/passport/passport/v1/session/: logout.rs  query.rs
crates/openlark-auth/src/services/: auth_service.rs  authen_service.rs  oauth_service.rs
crates/openlark-auth/src/token_provider/: tests.rs
crates/openlark-auth/src/verification/v1/verification/: get.rs
crates/openlark-auth/src/verification_information/: mod.rs
crates/openlark-auth/src/verification_information/verification/: mod.rs
crates/openlark-auth/src/verification_information/verification/v1/: mod.rs
crates/openlark-auth/src/verification_information/verification/v1/verification/: get.rs  mod.rs
crates/openlark-auth/tests/: auth_validation_tests.rs
crates/openlark-bot/: Cargo.toml
crates/openlark-bot/src/: lib.rs  service.rs
crates/openlark-bot/src/bot/: mod.rs
crates/openlark-bot/src/bot/bot/: mod.rs
crates/openlark-bot/src/bot/bot/v4/: mod.rs
crates/openlark-bot/src/bot/bot/v4/bot/: mod.rs  search.rs
crates/openlark-capability-unique/: Cargo.toml
crates/openlark-capability-unique/src/: lib.rs
crates/openlark-capability-unique/tests/: ui.rs
crates/openlark-capability-unique/tests/ui/: disabled_client_field.rs  disabled_client_field.stderr  duplicate_capability_field.rs  duplicate_capability_field.stderr  mismatch_capability_name.rs  mismatch_capability_name.stderr  mismatch_feature_field.rs  mismatch_feature_field.stderr
crates/openlark-client/: AGENTS.md  Cargo.toml  README.md
crates/openlark-communication/: Cargo.toml
crates/openlark-core/: AGENTS.md  Cargo.toml
crates/openlark-docs/: Cargo.toml
crates/openlark-helpdesk/: Cargo.toml
crates/openlark-hr/: Cargo.toml
crates/openlark-mail/: Cargo.toml
crates/openlark-meeting/: Cargo.toml
crates/openlark-platform/: Cargo.toml
crates/openlark-protocol/: Cargo.toml
crates/openlark-security/: Cargo.toml
crates/openlark-user/: Cargo.toml
crates/openlark-user/src/: lib.rs  service.rs
crates/openlark-user/src/common/: mod.rs
crates/openlark-user/src/personal_settings/: mod.rs
crates/openlark-user/src/personal_settings/personal_settings/: mod.rs
crates/openlark-user/src/personal_settings/personal_settings/v1/: mod.rs
crates/openlark-user/src/personal_settings/personal_settings/v1/system_status/: batch_close.rs  batch_open.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  patch.rs
crates/openlark-user/src/preferences/: v1.rs
crates/openlark-user/src/settings/: v1.rs
crates/openlark-user/tests/: user_contract_models.rs
crates/openlark-webhook/: Cargo.toml
crates/openlark-workflow/: Cargo.toml
docs/: 0.15.0_RELEASE_CHECKLIST.md  API_E2E_TEST_STRATEGY.md  CI_TEST_TARGET_COVERAGE.md  CLIENT_NAMING_CONVENTION.md  FEATURE_NAMING_CONVENTION.md  PUBLIC_REEXPORT_POLICY.md  RUNTIME_API_STUB_AUDIT.md  TODO_AUDIT_SUMMARY.md  api-contract-validation.md  api-implementation-template.md  api-spec-accuracy-audit.md  communication-workflow-helper-boundaries.md  hr-testing-guide.md  issue-41-backlog.md  legacy-entrypoint-migration-notes.md  migration-guide.md  typed-api-coverage.md
docs/adr/: 0001-navigation-shell-redesign.md  0002-auth-concern-concentration.md  0003-ws-endpoint-discovery-via-transport.md
docs/agents/: triage-labels.md
docs/issues/: 2026-06-16-acs-empty-shell-implementations.md
examples/: test_debug.rs  workflow_api_example.rs
examples/01_getting_started/: README.md  communication_workflows.rs  docs_helpers.rs  docs_workflows.rs  websocket_echo_bot.rs
scripts/: check-pre-release-compatibility.sh  publish-workspace.sh
src/: lib.rs
tests/property/: mod.rs  (+1 more)
tools/: api_coverage.toml  check_mod_reachability.py  check_no_dead_code_allows.sh  check_no_handwritten_extraction.py  check_reqwest_boundary.sh  check_typed_coverage_release.py  codegen.py  compare_api_catalogs.py  mod_reachability_allowlist.txt  restructure_hr.py  validate_api_contracts.py  validate_apis.py  verify_api_fields.py  wrap_bare_urls.py
(+2956 files in other folders)
