[package]
name = "openlark-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "OpenLark 认证模块 - 提供令牌管理、缓存、验证和刷新功能"

[lints]
workspace = true

[dependencies]
# 核心基础设施
openlark-core = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 异步运行时
tokio = { workspace = true, features = ["full"] }

# 时间处理
chrono = { workspace = true, features = ["serde"] }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志记录
# 注：tracing 当前在 openlark-auth 源码内未直接使用（原 common/ 缓存实现已删除），
# 但移除会触发 MSRV(1.88) Cargo.lock 重解析不一致（见 #244 CI）。保留以维持锁文件稳定。
tracing = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# 验证工具
regex = "1.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
rstest = { workspace = true }
wiremock = "0.6"

[package.metadata.cargo-machete]
ignored = ["anyhow", "base64", "hex", "rand", "regex", "thiserror", "tracing"]
