[package]
name = "openlark-capability-unique"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Internal generation-time uniqueness checks for openlark-client capability catalog (not published)"

[lints]
workspace = true

[dependencies]
openlark-client = { path = "../openlark-client", features = ["_test-catalog-unique"] }

[dev-dependencies]
trybuild = "1.0"
