[package]
name = "openlark-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Lark/Feishu websocket client protobuf definitions."
keywords = ["sdk", "feishu", "lark", "websocket"]
categories = ["api-bindings"]
documentation = "https://docs.rs/openlark-protocol"
repository = "https://github.com/foxzool/openlark"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }


[build-dependencies]
prost-build = "0.12.6"


[package.metadata.cargo-machete]
# bytes 仅由 prost 生成的代码间接使用（src/ 无直接 use），cargo-machete 会误报为未用，故 ignored
ignored = ["bytes"]
