[package]
name = "openlark-user"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "飞书开放平台用户设置模块 - 个人设置 system_status API"
keywords = ["feishu", "lark", "user", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[lints]
workspace = true

[features]
# openlark-user 无 optional feature：personal_settings（system_status）默认全编译。
# 历史 settings/preferences stub 链 + v1/full/user/all-user 别名已于 #311 删除（v0.18 breaking）。

[dependencies]
# 核心依赖
openlark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

# 工具依赖
uuid = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
serde_repr = { workspace = true }
log = { workspace = true }


[dev-dependencies]
tokio-test = "0.4"
wiremock = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["anyhow", "async-trait", "chrono", "futures", "log", "once_cell", "rand", "regex", "serde_repr", "thiserror", "url", "uuid"]
